// protoc --gofast_out=. events.proto
syntax = "proto3";

package result;

message ResultCreated {
  string ResultID = 1;
  string CheckpointID = 2;
  string SportsmenID = 3;
  string TimeStart = 4;
  string TimeFinish = 5;
  uint32 Version = 255;
}

