// protoc --gofast_out=. events.proto
syntax = "proto3";

package sportsmen;

message SportsmenCreated {
  string SportsmenID = 1;
  uint32 StartNumber = 2;
  string FirstName = 3;
  string LastName = 4;
  uint32 Version = 255;
}
